vbnc/vbnc/vbnc/tests/Errors/30311-1.vb
Class T
    Const i As Byte = #12:00:00 AM#
End Class